--- a/public/latest/assets/admin-css/header.css
+++ b/public/latest/assets/admin-css/header.css
@@ -32,36 +32,36 @@
   left: -25px;
   top: 60px;
   z-index: 99;
-  background-color: #fff;
-  min-width: 220px;
-  padding: 0.8rem;
-  border-radius: 6px;
-  border: 1px solid #ccc;
+  padding: 0.5rem;
   transform: translateY(-15%);
   display: none;
   transition: all linear 0.3s;
+  border-radius: 0.375rem;
+  background: var(--background-light-paper, #FFF);
+  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+  width: -moz-max-content;
+  width: max-content;
 }
 .header-area .navbar-nav .nav-item .submenu-box li a {
   display: block;
-  padding: 0.5rem 1rem;
-  color: #66768E;
-  font-size: 1rem;
+  padding: 0.4rem 0.5rem;
+  overflow: hidden;
+  color: var(--neutral-color-neutral-90, #101C2D);
+  text-overflow: ellipsis;
+  whitespace: nowrap;
+  font-family: Inter;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5rem;
-  background-color: #f1f1f1;
-  border-radius: 6px;
-  margin-bottom: 5px;
-  transition: all linear 0.3s;
+  line-height: 1.375rem;
+  transition: ease-in 0.3s;
 }
 .header-area .navbar-nav .nav-item .submenu-box li a:hover {
-  transform: translateX(5%);
-  background-color: #294CFF;
-  color: #fff;
+  transform: translateX(3%);
+  background-color: #F1F4F9;
 }
 .header-area .navbar-nav .nav-item .submenu-box li a.active {
-  background-color: #294CFF;
-  color: #fff;
+  background-color: #F1F4F9;
 }
 .header-area .navbar-nav .nav-item .submenu-box li:last-child a {
   margin-bottom: 0;
