--- a/scss/header.scss
+++ b/scss/header.scss
@@ -6,12 +6,13 @@
     border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
     background: var(--neutral-color-white, #FFF);
     padding: 0rem 1rem;
-    .dropdown-menu[data-bs-popper]{
+
+    .dropdown-menu[data-bs-popper] {
         left: -55px;
     }
 
-    .navbar-brand{
-        img{
+    .navbar-brand {
+        img {
             max-width: 8.5rem;
         }
     }
@@ -42,38 +43,37 @@
                 left: -25px;
                 top: 60px;
                 z-index: 99;
-                background-color: #fff;
-                min-width: 220px;
-                padding: .8rem;
-                border-radius: 6px;
-                border: 1px solid #ccc;
+                padding: .5rem;
                 transform: translateY(-15%);
                 display: none;
                 transition: all linear .3s;
+                border-radius: 0.375rem;
+                background: var(--background-light-paper, #FFF);
+                box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+                width: max-content;
 
                 li {
                     a {
                         display: block;
-                        padding: .5rem 1rem;
-                        color: #66768E;
-                        font-size: 1rem;
+                        padding: .4rem .5rem;
+                        overflow: hidden;
+                        color: var(--neutral-color-neutral-90, #101C2D);
+                        text-overflow: ellipsis;
+                        whitespace: nowrap;
+                        font-family: Inter;
+                        font-size: 0.875rem;
                         font-style: normal;
                         font-weight: 400;
-                        line-height: 1.5rem;
-                        background-color: #f1f1f1;
-                        border-radius: 6px;
-                        margin-bottom: 5px;
-                        transition: all linear .3s;
-
+                        line-height: 1.375rem; 
+                        transition: ease-in .3s;
                         &:hover {
-                            transform: translateX(5%);
-                            background-color: #294CFF;
-                            color: #fff;
+                            transform: translateX(3%);
+                            background-color: #F1F4F9;
                         }
                     }
-                    a.active{
-                        background-color: #294CFF;
-                        color: #fff;
+
+                    a.active {
+                        background-color: #F1F4F9;
                     }
 
                     &:last-child {
@@ -90,7 +90,7 @@
 
             &:hover {
                 .submenu-box {
-                   display: block;
+                    display: block;
                     transform: translateY(0);
                 }
             }
@@ -146,7 +146,8 @@
                 margin-left: 1.5rem;
                 object-fit: cover;
             }
-            span.avatar-user{
+
+            span.avatar-user {
                 width: 2.75rem;
                 height: 2.75rem;
                 border: 2px solid #294CFF;
