--- a/scss/user.scss
+++ b/scss/user.scss
@@ -133,21 +133,21 @@
         border-radius: 0.375rem;
         background: var(--background-light-paper, #FFF);
         box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
-        transform: translate3d(54.6px, -25.6px, 0px) !important;
+        transform: translate3d(110.4px, -26.6px, 0px) !important;
         padding: .5rem;
         border: 0;
+        min-width: 6.6875rem !important;
 
         li {
             .dropdown-item {
                 overflow: hidden;
                 color: var(--neutral-color-neutral-90, #101C2D);
-                font-family: Inter;
                 font-size: 0.875rem;
                 font-style: normal;
                 font-weight: 400;
                 line-height: 1.375rem;
                 display: inline-block;
-                padding: .5rem .8rem;
+                padding: .2rem .8rem;
                 border-radius: 8px;
                 margin: 0;
             }
