--- a/public/latest/assets/admin-css/header.css
+++ b/public/latest/assets/admin-css/header.css
@@ -6,6 +6,12 @@
 .header-area .dropdown-menu[data-bs-popper] {
   left: -55px;
 }
+.header-area .dropdown-menu {
+  border-radius: 0.375rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: var(--background-light-paper, #FFF);
+  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+}
 .header-area .navbar-brand img {
   max-width: 8.5rem;
 }
