--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -896,6 +896,270 @@
   height: 100px;
 }
 
+.profile-text-box-2 {
+  margin-top: 0;
+  padding: 0;
+  box-shadow: none;
+  border-radius: 1rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: var(--background-light-paper, #FFF);
+  padding: 1rem 0.5rem;
+}
+
+.add-experience-form .profile-text-box-2 {
+  border: 0;
+  padding: 1rem;
+}
+.add-experience-form .profile-text-box-2 .form-control + label,
+.add-experience-form .profile-text-box-2 .form-control + label {
+  top: -6px;
+  color: var(--text-light-disabled, #919EAB);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0.75rem;
+}
+
+.user-expperience-box-2 {
+  border: 0;
+}
+
+.certificate-header-tab {
+  margin: 3rem 0 2rem;
+}
+.certificate-header-tab .nav {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
+}
+.certificate-header-tab .nav .nav-item .nav-link {
+  border-radius: 0.375rem;
+  border: 1.5px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  height: 4.125rem;
+  transition: ease-in 0.3s;
+}
+.certificate-header-tab .nav .nav-item .nav-link i {
+  margin-right: 0.8rem;
+}
+.certificate-header-tab .nav .nav-item .nav-link:hover {
+  border: 1.5px solid var(--primary-color-blue-light, #3D5CFF);
+  color: #294CFF;
+}
+.certificate-header-tab .nav .nav-item .active {
+  border: 1.5px solid var(--primary-color-blue-light, #3D5CFF);
+  color: #294CFF;
+}
+.certificate-header-tab .nav .nav-item:last-child .nav-link {
+  margin-left: 2rem;
+}
+
+.create-certificate-form {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  padding: 2rem;
+}
+.create-certificate-form .certificate-name {
+  border-right: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  padding-right: 1.8rem;
+}
+.create-certificate-form .certificate-name h6 {
+  color: var(--gray-900, #101828);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-bottom: 1rem;
+}
+.create-certificate-form .certificate-name .form-control {
+  border-radius: 0.5rem;
+  border: 1px solid var(--components-input-outlined, rgba(145, 158, 171, 0.32));
+  padding: 1rem 0.875rem;
+  overflow: hidden;
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  text-overflow: ellipsis;
+  whitespace: nowrap;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+}
+.create-certificate-form .certificate-name .media {
+  align-items: center;
+  margin-top: 1rem;
+}
+.create-certificate-form .certificate-name .media img {
+  margin-right: 1.5rem;
+}
+.create-certificate-form .certificate-name .media .media-body h5 {
+  color: var(--gray-900, #101828);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-bottom: 0.5rem;
+}
+.create-certificate-form .certificate-name .media .media-body p {
+  color: #5E6B80;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+}
+.create-certificate-form .certificate-name .media a img {
+  margin-right: 0;
+}
+
+.certificate-style-box {
+  margin-top: 1.5rem;
+  border-right: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  padding-right: 1.8rem;
+}
+.certificate-style-box h6 {
+  color: var(--gray-900, #101828);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.certificate-style-box .media {
+  align-items: center;
+  margin-top: 1rem;
+}
+.certificate-style-box .media img {
+  margin-right: 1.5rem;
+  width: 8.625rem;
+  height: 6.25rem;
+  border-radius: 6px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.certificate-style-box .media .d-flex {
+  align-items: center;
+  justify-content: space-between;
+}
+.certificate-style-box .media .d-flex span {
+  display: inline-block;
+  color: var(--soft-green, #32BCA3);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.certificate-style-box .media .media-body h6 {
+  color: var(--gray-900, #101828);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-bottom: 0.5rem;
+}
+.certificate-style-box .media .media-body p {
+  color: #5E6B80;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  width: 90%;
+  line-height: 1.25rem;
+}
+
+.certificate-asset-upload {
+  margin-bottom: 1.5rem;
+}
+.certificate-asset-upload h5 {
+  color: var(--gray-900, #101828);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-bottom: 1rem;
+}
+.certificate-asset-upload img {
+  margin-bottom: 1rem;
+}
+.certificate-asset-upload .upload-media-box {
+  border-radius: 0.5rem;
+  border: 1px dashed var(--neutral-color-neutral-40, #C5CCD8);
+  background: var(--white, #FFF);
+  display: flex;
+  padding: 1rem 1rem;
+  flex-direction: column;
+  align-items: center;
+  color: #5E6B80;
+  text-align: center;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+}
+.certificate-asset-upload .upload-media-box span {
+  color: #294CFF;
+}
+
+.create-certificate-form-2 .form-group {
+  position: relative;
+  margin-top: 1.5rem;
+  border: 0;
+  padding-right: 0;
+}
+.create-certificate-form-2 .form-group label {
+  position: absolute;
+  top: 20px;
+  left: 12px;
+  text-align: left;
+  display: inline-block;
+  padding: 0 4px;
+  height: 14px;
+  color: var(--text-light-disabled, #919EAB);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0.75rem;
+  margin: 0px auto;
+  cursor: text;
+  transition: all 0.15s ease-in-out;
+  background-color: #fff;
+}
+.create-certificate-form-2 .form-group .form-control:hover,
+.create-certificate-form-2 .form-group .form-control:focus {
+  border: 1px solid #294CFF;
+}
+.create-certificate-form-2 .form-group .form-control:valid + label,
+.create-certificate-form-2 .form-group .form-control:focus + label {
+  top: -6px;
+  color: var(--text-light-disabled, #919EAB);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0.75rem;
+}
+.create-certificate-form-2 .form-control {
+  position: relative;
+  background-color: transparent;
+  outline: none !important;
+  color: var(--text-light-primary, #212B36);
+  text-overflow: ellipsis;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  transition: all 0.2s ease-in-out;
+  padding: 1rem 0.875rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--components-input-outlined, rgba(145, 158, 171, 0.32));
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .user-profile-picture .media {
     padding: 1rem;
