--- a/scss/header.scss
+++ b/scss/header.scss
@@ -11,6 +11,13 @@
         left: -55px;
     }
 
+    .dropdown-menu {
+        border-radius: 0.375rem;
+        border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+        background: var(--background-light-paper, #FFF);
+        box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+    }
+
     .navbar-brand {
         img {
             max-width: 8.5rem;
@@ -64,8 +71,9 @@
                         font-size: 0.875rem;
                         font-style: normal;
                         font-weight: 400;
-                        line-height: 1.375rem; 
+                        line-height: 1.375rem;
                         transition: ease-in .3s;
+
                         &:hover {
                             transform: translateX(3%);
                             background-color: #F1F4F9;
