--- a/scss/user.scss
+++ b/scss/user.scss
@@ -348,7 +348,7 @@
     margin-top: 1.5rem;
 
     form {
-        
+
         .form-group {
             margin-bottom: 1.5rem;
             position: relative;
@@ -705,7 +705,7 @@
             line-height: 1.5rem;
             height: 3rem;
         }
- 
+
 
         i {
             color: #212B36;
@@ -927,8 +927,8 @@
                     position: relative;
                     padding: 1rem;
                     z-index: 1;
-                    
-                    
+
+
 
                     .ol {
                         position: absolute;
@@ -936,9 +936,9 @@
                         top: 5%;
                         width: 90%;
                         height: 90%;
-                        z-index: -1; 
+                        z-index: -1;
 
-                        &:before{
+                        &:before {
                             position: absolute;
                             content: "";
                             left: 0;
@@ -1037,16 +1037,315 @@
     }
 }
 
+.profile-text-box-2 {
+    margin-top: 0;
+    padding: 0;
+    box-shadow: none;
+    border-radius: 1rem;
+    border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    background: var(--background-light-paper, #FFF);
+    padding: 1rem 0.5rem;
+}
+
+.add-experience-form {
+    .profile-text-box-2 {
+        border: 0;
+        padding: 1rem;
+
+        .form-control+label,
+        .form-control+label {
+            top: -6px;
+            color: var(--text-light-disabled, #919EAB);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 0.75rem;
+        }
+    }
+}
+
+.user-expperience-box-2 {
+    border: 0;
+}
+
+.certificate-header-tab {
+    margin: 3rem 0 2rem;
+
+    .nav {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        align-items: center;
+
+        .nav-item {
+            .nav-link {
+                border-radius: 0.375rem;
+                border: 1.5px solid var(--neutral-color-neutral-30, #E5ECF6);
+                background: #FFF;
+                color: var(--neutral-color-neutral-60, #66768E);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.5rem;
+                @include m.df(center);
+                width: 100%;
+                text-align: center;
+                height: 4.125rem;
+                transition: ease-in .3s;
+
+                i {
+                    margin-right: 0.8rem;
+                }
+
+                &:hover {
+                    border: 1.5px solid var(--primary-color-blue-light, #3D5CFF);
+                    color: #294CFF;
+                }
+
+            }
+
+            .active {
+                border: 1.5px solid var(--primary-color-blue-light, #3D5CFF);
+                color: #294CFF;
+            }
+
+            &:last-child {
+                .nav-link {
+                    margin-left: 2rem;
+                }
+            }
+        }
+    }
+}
+
+.create-certificate-form {
+    border-radius: 0.5rem;
+    border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    background: #FFF;
+    padding: 2rem;
 
 
+    .certificate-name {
+        border-right: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+        padding-right: 1.8rem;
 
+        h6 {
+            color: var(--gray-900, #101828);
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.75rem;
+            margin-bottom: 1rem;
+        }
 
+        .form-control {
+            border-radius: 0.5rem;
+            border: 1px solid var(--components-input-outlined, rgba(145, 158, 171, 0.32));
+            padding: 1rem 0.875rem;
+            overflow: hidden;
+            color: var(--neutral-color-neutral-70, #2F3A4C);
+            text-overflow: ellipsis;
+            whitespace: nowrap;
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1.5rem;
+        }
 
+        .media {
+            align-items: center;
+            margin-top: 1rem;
 
+            img {
+                margin-right: 1.5rem;
+            }
 
+            .media-body {
+                h5 {
+                    color: var(--gray-900, #101828);
+                    font-size: 1.125rem;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 1.75rem;
+                    margin-bottom: 0.5rem;
+                }
 
+                p {
+                    color: #5E6B80;
+                    font-size: 0.875rem;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.25rem;
+                }
+            }
 
+            a {
+                img {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+}
 
+.certificate-style-box {
+    margin-top: 1.5rem;
+    border-right: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    padding-right: 1.8rem;
+
+    h6 {
+        color: var(--gray-900, #101828);
+        font-size: 1.125rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.75rem;
+    }
+
+    .media {
+        align-items: center;
+        margin-top: 1rem;
+
+        img {
+            margin-right: 1.5rem;
+            width: 8.625rem;
+            height: 6.25rem;
+            border-radius: 6px;
+            object-fit: cover;
+        }
+
+        .d-flex {
+            align-items: center;
+            justify-content: space-between;
+
+            span {
+                display: inline-block;
+                color: var(--soft-green, #32BCA3);
+                font-size: 0.75rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.75rem;
+            }
+        }
+
+        .media-body {
+            h6 {
+                color: var(--gray-900, #101828);
+                font-size: 1.125rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.75rem;
+                margin-bottom: 0.5rem;
+            }
+
+            p {
+                color: #5E6B80;
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 400;
+                width: 90%;
+                line-height: 1.25rem;
+            }
+        }
+    }
+}
+
+.certificate-asset-upload {
+    margin-bottom: 1.5rem;
+    h5 {
+        color: var(--gray-900, #101828);
+        font-size: 1.125rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.75rem;
+        margin-bottom: 1rem;
+    }
+
+    img{
+        margin-bottom: 1rem;
+    }
+
+    .upload-media-box {
+        border-radius: 0.5rem;
+        border: 1px dashed var(--neutral-color-neutral-40, #C5CCD8);
+        background: var(--white, #FFF);
+        display: flex;
+        padding: 1rem 1rem;
+        flex-direction: column;
+        align-items: center;
+        color: #5E6B80;
+        text-align: center; 
+        font-size: 0.75rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.125rem; 
+        
+        span{
+            color: #294CFF;
+        }
+    }
+}
+
+.create-certificate-form-2 { 
+    .form-group {
+        position: relative;
+        margin-top: 1.5rem;
+        border: 0;
+        padding-right: 0;
+
+        label {
+            position: absolute;
+            top: 20px;
+            left: 12px;
+            text-align: left;
+            display: inline-block;
+            padding: 0 4px;
+            height: 14px;
+            color: var(--text-light-disabled, #919EAB);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 0.75rem;
+            margin: 0px auto;
+            cursor: text;
+            transition: all .15s ease-in-out;
+            background-color: #fff;
+        }
+    
+    
+    
+        .form-control:hover,
+        .form-control:focus {
+            border: 1px solid #294CFF;
+        }
+    
+    
+        .form-control:valid+label,
+        .form-control:focus+label {
+            top: -6px;
+            color: var(--text-light-disabled, #919EAB);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 0.75rem;
+        }
+    } 
+
+    .form-control {
+        position: relative;
+        background-color: transparent;
+        outline: none !important;
+        color: var(--text-light-primary, #212B36);
+        text-overflow: ellipsis;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.5rem;
+        transition: all .2s ease-in-out;
+        padding: 1rem 0.875rem;
+        border-radius: 0.5rem;
+        border: 1px solid var(--components-input-outlined, rgba(145, 158, 171, 0.32));
+    }  
+     
+}
 
 
 
@@ -1156,11 +1455,13 @@
             }
         }
     }
+
     .student-profile-update-page .own-profile-box .custom-padding,
-    .student-profile-update-page .own-profile-box .header{
+    .student-profile-update-page .own-profile-box .header {
         padding: 1rem;
     }
-    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box{
+
+    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box {
         padding: 2rem 1rem;
         margin-bottom: 1.5rem;
     }
@@ -1199,10 +1500,11 @@
     }
 
     .student-profile-update-page .own-profile-box .custom-padding,
-    .student-profile-update-page .own-profile-box .header{
+    .student-profile-update-page .own-profile-box .header {
         padding: 1rem;
     }
-    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box{
+
+    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box {
         padding: 2rem 1rem;
         margin-bottom: 1.5rem;
     }
@@ -1219,10 +1521,11 @@
     }
 
     .student-profile-update-page .own-profile-box .custom-padding,
-    .student-profile-update-page .own-profile-box .header{
+    .student-profile-update-page .own-profile-box .header {
         padding: 1rem;
     }
-    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box{
+
+    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box {
         padding: 2rem 1rem;
         margin-bottom: 1.5rem;
     }
