--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -12,7 +12,7 @@
 
     .course-thumb-box {
         position: relative;
-        min-height: 12rem;
+        min-height: 11rem;
 
         img {
             flex: 1 0 0;
@@ -581,7 +581,7 @@ span.finsihLesson {
             &:before {
                 position: absolute;
                 content: "";
-                left: 57px;
+                left: 51px;
                 top: 8px;
                 background-color: #E7EBFF;
                 height: 0.125rem;
@@ -733,7 +733,7 @@ span.finsihLesson {
         grid-template-columns: 1fr 1fr;
 
         .step-box:before {
-            left: 87px;
+            left: 79px;
         }
     }
 }
@@ -1753,13 +1753,14 @@ span.finsihLesson {
             text-align: left;
 
             li {
-                color: var(--neutral-color-neutral-70, #2F3A4C); 
+                color: var(--neutral-color-neutral-70, #2F3A4C);
                 font-size: 0.875rem;
                 font-style: normal;
                 font-weight: 400;
-                line-height: 150%; 
+                line-height: 150%;
                 margin-top: 0.6rem;
-                img{
+
+                img {
                     margin-right: 0.5rem;
                 }
             }
@@ -1767,12 +1768,74 @@ span.finsihLesson {
     }
 }
 
+.visibility-form-wrap{
+    .form-group{
+        position: relative;
+        .form-control{
+            padding-left: 2rem;
+        }
+        i{
+            position: absolute;
+            left: 11px;
+            top: 3.3rem;
+            color: #294CFF;
+            font-size: 10px;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 // small phone device
 @include q.responsive(phone) {
     .course-title {
         padding: 1rem 0;
+    }
+
+    .course-single-item .course-thumb-box .header-action .dropdown-menu {
+        transform: translate3d(-30.4px, -26.6px, 0px) !important;
+    }
+
+    .payment-name-box{
+        flex-direction: column;
+        align-items: flex-start;
+        div{
+            margin-bottom: 1rem;
+        }
+    }
+
+    .pay-details-box-invoice{
+        padding: 1rem;
+    }
+
+    .pay-details-box-invoice table tr td,
+    .pay-details-box-invoice table tr th{
+        padding: 10px;
+    }
+    .pay-details-box-invoice .download-inv-box a:last-child{
+        margin-left: 0.5rem;
+        font-size: 15px;
+    }
+
+    .paid-student-name{
+        margin-top: 1rem;
     }
 
     .course-title h1 {
