--- a/scss/ins-dashboard.scss
+++ b/scss/ins-dashboard.scss
@@ -33,6 +33,7 @@
         font-weight: 500;
         line-height: 1.875rem;
         letter-spacing: 0.01rem;
+        margin-top: 0.75rem;
     }
 
     .d_flex {
@@ -62,6 +63,33 @@
         }
     }
 }
+
+.course-box-overflown{
+    max-height: 19.4375rem;
+    overflow-y: scroll; 
+    .media{
+        margin-right: 1rem;
+    }
+}
+
+.course-box-overflown::-webkit-scrollbar {
+    width: 0.31769rem;
+  }
+  
+  /* Track */
+  .course-box-overflown::-webkit-scrollbar-track {
+    background: #E5ECF6; 
+  }
+   
+  /* Handle */
+  .course-box-overflown::-webkit-scrollbar-thumb {
+    background: #A6B1C4; 
+  }
+  
+  /* Handle on hover */
+  .course-box-overflown::-webkit-scrollbar-thumb:hover {
+    background: #A6B1C4; 
+  }
 
 .my-courses-box {
     border-radius: 0.5rem;
