--- a/public/latest/assets/admin-css/header.css
+++ b/public/latest/assets/admin-css/header.css
@@ -3,14 +3,31 @@
   background: var(--neutral-color-white, #FFF);
   padding: 0rem 1rem;
 }
+.header-area .container-fluid {
+  max-width: 86rem !important;
+}
 .header-area .dropdown-menu[data-bs-popper] {
-  left: -55px;
+  left: -116px !important;
+  top: 47px !important;
 }
 .header-area .dropdown-menu {
   border-radius: 0.375rem;
   border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
   background: var(--background-light-paper, #FFF);
   box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+  padding: 0.5rem;
+}
+.header-area .dropdown-menu .dropdown-item {
+  color: var(--neutral-color-neutral-70, #2F3A4C) !important;
+  font-size: 0.875rem !important;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  line-height: 1.375rem !important;
+  padding: 0.25rem 0.5rem !important;
+  border-radius: 0.375rem !important;
+}
+.header-area .dropdown-menu .dropdown-item:hover {
+  background: var(--neutral-color-neutral-20, #F1F4F9);
 }
 .header-area .navbar-brand img {
   max-width: 8.5rem;
@@ -41,7 +58,6 @@
   padding: 0.5rem;
   transform: translateY(-15%);
   display: none;
-  transition: all linear 0.3s;
   border-radius: 0.375rem;
   background: var(--background-light-paper, #FFF);
   box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
@@ -50,30 +66,32 @@
 }
 .header-area .navbar-nav .nav-item .submenu-box li a {
   display: block;
-  padding: 0.4rem 0.5rem;
+  padding: 0.3rem 0.5rem;
   overflow: hidden;
   color: var(--neutral-color-neutral-90, #101C2D);
   text-overflow: ellipsis;
   whitespace: nowrap;
-  font-family: Inter;
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.375rem;
   transition: ease-in 0.3s;
+  margin-bottom: 0.2rem;
+  border-radius: 0.375rem !important;
 }
 .header-area .navbar-nav .nav-item .submenu-box li a:hover {
-  transform: translateX(3%);
-  background-color: #F1F4F9;
+  transform: translateX(1%);
+  background: var(--neutral-color-neutral-20, #F1F4F9);
 }
 .header-area .navbar-nav .nav-item .submenu-box li a.active {
-  background-color: #F1F4F9;
+  background: var(--neutral-color-neutral-20, #F1F4F9);
 }
 .header-area .navbar-nav .nav-item .submenu-box li:last-child a {
   margin-bottom: 0;
 }
 .header-area .navbar-nav .nav-item .nav-link.active {
   color: #000000;
+  font-weight: 500;
 }
 .header-area .navbar-nav .nav-item:hover .submenu-box {
   display: block;
@@ -92,7 +110,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-left: 1.5rem;
+  margin-right: 1.5rem;
   position: relative;
 }
 .header-area .d-flex a.bttn span {
@@ -114,31 +132,29 @@
   line-height: 1.25rem;
   /* 181.818% */
 }
-.header-area .d-flex a.avatar img {
-  width: 2.75rem;
-  height: 2.75rem;
-  border: 2px solid #294CFF;
-  border-radius: 0.75rem;
-  display: inline-block;
+.header-area .d-flex .btn.avatar img {
   width: 2.5rem;
   height: 2.5rem;
-  margin-left: 1.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.75rem;
   -o-object-fit: cover;
      object-fit: cover;
+  border: 2px solid #FFF;
+  outline: #294CFF solid 2px;
 }
-.header-area .d-flex a.avatar span.avatar-user {
-  width: 2.75rem;
-  height: 2.75rem;
-  border: 2px solid #294CFF;
+.header-area .d-flex .btn.avatar span.avatar-user {
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 2px solid #FFF;
+  outline: #294CFF solid 2px;
   border-radius: 0.75rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 2.5rem;
-  height: 2.5rem;
-  margin-left: 1.5rem;
   background-color: #E5ECF6;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 .header-area .d-flex .dropdown .btn {
