--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -606,6 +606,14 @@
   left: 12px;
   top: 15px;
 }
+.user-search-box-wrap .form-group option {
+  background-color: #101C2D;
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
 .user-search-box-wrap .form-filter {
   position: relative;
 }
@@ -1418,6 +1426,61 @@
   color: #212B36 !important;
   border-bottom: 2.5px solid #294CFF !important;
 }
+.dns-main-body .form-check-label-2 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1rem;
+  margin-bottom: 0.5rem;
+}
+.dns-main-body .d-flex {
+  align-items: center;
+  margin-top: 2rem;
+}
+.dns-main-body .d-flex a {
+  margin-right: 1.8rem;
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1rem;
+}
+.dns-main-body .d-flex a img {
+  margin-right: 0.5rem;
+}
+.dns-main-body .finish-txt h2 {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.dns-main-body .finish-txt h2 img {
+  margin-right: 0.8rem;
+}
+.dns-main-body .finish-txt h4 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-family: Inter;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1rem;
+  margin-top: 2rem;
+}
+.dns-main-body .finish-txt a {
+  display: block;
+  color: var(--primary-color-blue, #294CFF);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1rem;
+  margin-top: 1rem;
+}
+
+.feat-box .media img {
+  margin-right: 0 !important;
+  margin-left: 1rem;
+}
 
 @media (min-width: 320px) and (max-width: 574px) {
   .user-profile-picture .media {
@@ -1440,6 +1503,68 @@
   }
   .user-profile-picture .media .media-body p {
     font-size: 0.9rem;
+  }
+  .student-profile-update-page .own-profile-box .header .nav .nav-item .nav-link {
+    margin-right: 0.5rem;
+    font-size: 13px;
+  }
+  .dns-settings-box-wrapper {
+    grid-template-columns: 100%;
+  }
+  .dns-main-body {
+    padding: 1.5rem;
+  }
+  .dns-main-body .add-domain-box h2, .dns-main-body .add-domain-box h1 {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+  }
+  .user-expperience-box .media p,
+  .user-expperience-box .media h6 {
+    font-size: 14px;
+  }
+  .certificate-header-tab .nav .nav-item .nav-link {
+    font-size: 13px;
+  }
+  .certificate-header-tab .nav .nav-item .nav-link i {
+    margin-right: 0.2rem;
+  }
+  .dns-main-body .add-domain-box .form-group {
+    width: 100%;
+  }
+  .dns-main-body .domain-verify-box .form-check label {
+    font-size: 1rem;
+  }
+  .dns-main-body .domain-verify-box .form-check h6 {
+    font-size: 0.875rem;
+  }
+  .dns-main-body .d-flex a {
+    font-size: 0.875rem;
+    margin-right: 0.4rem;
+  }
+  .create-certificate-form {
+    padding: 1rem;
+  }
+  .certificate-style-box .media,
+  .create-certificate-form .certificate-name .media {
+    flex-direction: column;
+  }
+  .certificate-style-box .media a,
+  .create-certificate-form .certificate-name .media a {
+    margin-top: 1rem;
+  }
+  .certificate-style-box .media p {
+    width: 100%;
+    margin-right: 0;
+  }
+  .certificate-style-box .media img {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+  .certificate-asset-upload {
+    margin-top: 1rem;
+  }
+  .certificate-header-tab .nav .nav-item:last-child .nav-link {
+    margin-left: 0.5rem;
   }
   .user-details-box {
     padding: 1rem;
@@ -1510,6 +1635,19 @@
 @media (min-width: 574px) and (max-width: 767px) {
   .contact-info-box {
     margin-top: 2rem;
+  }
+  .dns-main-body .add-domain-box .form-group {
+    width: 100%;
+  }
+  .dns-main-body .domain-verify-box .form-check label {
+    font-size: 1rem;
+  }
+  .dns-main-body .domain-verify-box .form-check h6 {
+    font-size: 0.875rem;
+  }
+  .dns-main-body .d-flex a {
+    font-size: 0.875rem;
+    margin-right: 0.4rem;
   }
   #image-container {
     margin-bottom: 1.5rem;
