--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -7,7 +7,8 @@ main {
     padding-bottom: 2rem;
 
     .container-fluid {
-        padding: 0 6.5rem;
+        // padding: 0 6.5rem;
+        max-width: 76rem!important;
     }
 }
 
