--- a/scss/user.scss
+++ b/scss/user.scss
@@ -1729,15 +1729,35 @@
             line-height: 1rem;
             margin-top: 1rem;
         }
+    }   
+}
+
+
+.feat-box .media {
+    img{
+        margin-right: 1!important;
+        margin-left: 0rem;
+    }
+
+    a{
+        img{
+            margin-right: 0!important;
+        margin-left: 1rem!important;
+        }
     }
 }
 
 
-.feat-box .media img{
-    margin-right: 0!important;
-    margin-left: 1rem;
+.paggination-wrap{
+    .d-none.flex-sm-fill.d-sm-flex.align-items-sm-center.justify-content-sm-between{
+        justify-content: center!important;
+        div{
+            &:first-child{
+                display: none!important;
+            }
+        }
+    }
 }
-
 
 
 
